[project]
name = "accprob"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "take0x", email = "89313929+take0x@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
accprob = "accprob.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/accprob"]
